--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -1,15 +1,14 @@
 name: Build Windows Binary
 
 on:
-  push:
-    branches: ["main"]
-  pull_request:
-    branches: ["main"]
   workflow_dispatch:
 
 jobs:
   windows-binary:
     runs-on: windows-latest
+    permissions:
+      contents: read
+      packages: write
 
     steps:
       - name: Checkout
@@ -29,8 +28,20 @@ jobs:
         run: |
           pyinstaller --noconfirm --onefile radioaward_bridge.py
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: radioaward_bridge-windows
-          path: dist/radioaward_bridge.exe
+      - name: Package artifact
+        run: |
+          Compress-Archive -Path dist\radioaward_bridge.exe -DestinationPath dist\radioaward_bridge-windows.zip
+
+      - name: Install ORAS
+        run: choco install oras -y
+
+      - name: Login to GHCR
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | oras login ghcr.io -u ${{ github.actor }} --password-stdin
+
+      - name: Publish package
+        env:
+          IMAGE: ghcr.io/${{ github.repository_owner }}/radioaward-bridge-windows
+          VERSION: v${{ github.run_number }}
+        run: |
+          oras push $env:IMAGE:$env:VERSION dist\radioaward_bridge-windows.zip:application/zip
+          oras push $env:IMAGE:latest dist\radioaward_bridge-windows.zip:application/zip
