--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Publish package
         env:
           IMAGE: ghcr.io/${{ github.repository_owner }}/radioaward-bridge-macos
-          VERSION: v${{ github.run_number }}
+          VERSION: ${{ github.ref_type == 'tag' && github.ref_name || format('run-{0}', github.run_number) }}
         run: |
           oras push $IMAGE:$VERSION dist/radioaward_bridge-macos.zip:application/zip
           oras push $IMAGE:latest dist/radioaward_bridge-macos.zip:application/zip
