--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Publish package
         env:
           IMAGE: ghcr.io/${{ github.repository_owner }}/radioaward-bridge-windows
-          VERSION: v${{ github.run_number }}
+          VERSION: ${{ github.ref_type == 'tag' && github.ref_name || format('run-{0}', github.run_number) }}
         run: |
           oras push $env:IMAGE:$env:VERSION dist\radioaward_bridge-windows.zip:application/zip
           oras push $env:IMAGE:latest dist\radioaward_bridge-windows.zip:application/zip
