--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -44,5 +44,5 @@ jobs:
           IMAGE: ghcr.io/${{ github.repository_owner }}/radioaward-bridge-macos
           VERSION: ${{ github.ref_type == 'tag' && github.ref_name || format('run-{0}', github.run_number) }}
         run: |
-          oras push $IMAGE:$VERSION dist/radioaward_bridge-macos.zip:application/zip
-          oras push $IMAGE:latest dist/radioaward_bridge-macos.zip:application/zip
+          oras push "$IMAGE:$VERSION" dist/radioaward_bridge-macos.zip:application/zip
+          oras push "$IMAGE:latest" dist/radioaward_bridge-macos.zip:application/zip
