--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -2,12 +2,6 @@ name: Build Windows Binary
 
 on:
   workflow_dispatch:
-    inputs:
-      tag:
-        description: Git tag que se va a empaquetar (ej. v1.0.0)
-        required: true
-        type: choice
-        options: ${{ fromJSON(vars.RADIOAWARD_TAGS || '["main"]') }}
 
 jobs:
   windows-binary:
@@ -21,7 +15,17 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ inputs.tag }}
+
+      - name: Determine latest release tag
+        id: latest
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          $tag = (gh release view latest --json tagName --jq '.tagName')
+          if (-not $tag) { throw "No se pudo determinar el tag latest." }
+          git fetch --tags --force
+          git checkout $tag
+          "tag=$tag" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8 -Append
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -53,7 +57,7 @@ jobs:
       - name: Publish package
         env:
           IMAGE: ghcr.io/${{ github.repository_owner }}/radioaward-bridge-windows
-          VERSION: ${{ inputs.tag }}
+          VERSION: ${{ steps.latest.outputs.tag }}
         shell: pwsh
         run: |
           $artifact = "dist/radioaward_bridge.exe:application/octet-stream"
