--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -1,11 +1,8 @@
 name: Build macOS Binary
 
 on:
-  workflow_dispatch:
-    inputs:
-      version:
-        description: Tag o texto de la versión a empaquetar (ej. v1.2.3)
-        required: true
+  release:
+    types: [published]
 
 jobs:
   macos-binary:
@@ -19,7 +16,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ inputs.version }}
+          ref: ${{ github.event.release.tag_name }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -42,7 +39,7 @@ jobs:
 
       - name: Version artifact
         env:
-          VERSION: ${{ inputs.version }}
+          VERSION: ${{ github.event.release.tag_name }}
         run: |
           cd dist
           mv radioaward_bridge-macos.zip "radioaward_bridge-macos-$VERSION.zip"
@@ -56,7 +53,7 @@ jobs:
       - name: Publish package
         env:
           IMAGE: ghcr.io/${{ github.repository_owner }}/radioaward-bridge-macos
-          VERSION: ${{ inputs.version }}
+          VERSION: ${{ github.event.release.tag_name }}
         run: |
           oras push "$IMAGE:$VERSION" "dist/radioaward_bridge-macos-$VERSION.zip:application/zip"
           oras push "$IMAGE:latest" "dist/radioaward_bridge-macos-$VERSION.zip:application/zip"
