--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -3,6 +3,11 @@ name: Build macOS Binary
 on:
   release:
     types: [published]
+  workflow_dispatch:
+    inputs:
+      version:
+        description: Tag/release a compilar (ej. v1.2.3). Si se deja vacio usa el tag del evento.
+        required: false
 
 jobs:
   macos-binary:
@@ -16,7 +21,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.event.release.tag_name }}
+          ref: ${{ inputs.version || github.event.release.tag_name || github.ref_name }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -39,7 +44,7 @@ jobs:
 
       - name: Version artifact
         env:
-          VERSION: ${{ github.event.release.tag_name }}
+          VERSION: ${{ inputs.version || github.event.release.tag_name || github.ref_name }}
         run: |
           cd dist
           mv radioaward_bridge-macos.zip "radioaward_bridge-macos-$VERSION.zip"
@@ -53,7 +58,7 @@ jobs:
       - name: Publish package
         env:
           IMAGE: ghcr.io/${{ github.repository_owner }}/radioaward-bridge-macos
-          VERSION: ${{ github.event.release.tag_name }}
+          VERSION: ${{ inputs.version || github.event.release.tag_name || github.ref_name }}
         run: |
           oras push "$IMAGE:$VERSION" "dist/radioaward_bridge-macos-$VERSION.zip:application/zip"
           oras push "$IMAGE:latest" "dist/radioaward_bridge-macos-$VERSION.zip:application/zip"
