--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -3,6 +3,11 @@ name: Build Windows Binary
 on:
   release:
     types: [published]
+  workflow_dispatch:
+    inputs:
+      version:
+        description: Tag/release a compilar (ej. v1.2.3). Si se deja vacio usa el tag del evento.
+        required: false
 
 jobs:
   windows-binary:
@@ -15,7 +20,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.event.release.tag_name }}
+          ref: ${{ inputs.version || github.event.release.tag_name || github.ref_name }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -34,7 +39,7 @@ jobs:
       - name: Version artifact
         shell: pwsh
         env:
-          VERSION: ${{ github.event.release.tag_name }}
+          VERSION: ${{ inputs.version || github.event.release.tag_name || github.ref_name }}
         run: |
           $src = "dist/radioaward_bridge.exe"
           $dest = "dist/radioaward_bridge-$env:VERSION.exe"
@@ -43,7 +48,7 @@ jobs:
       - name: Package artifact
         shell: pwsh
         env:
-          VERSION: ${{ github.event.release.tag_name }}
+          VERSION: ${{ inputs.version || github.event.release.tag_name || github.ref_name }}
         run: |
           $zip = "dist/radioaward_bridge-$env:VERSION.zip"
           $exe = "dist/radioaward_bridge-$env:VERSION.exe"
@@ -52,7 +57,7 @@ jobs:
 
       - name: Upload release asset
         env:
-          VERSION: ${{ github.event.release.tag_name }}
+          VERSION: ${{ inputs.version || github.event.release.tag_name || github.ref_name }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         shell: pwsh
         run: |
